# token-auditor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _logging.py  main.py  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
core/: claude.py  codex.py  constants.py  jsonl.py  pricing.py  render.py  session_resolution.py  types.py  utils.py
shell/: __init__.py  io_adapters.py
src/token_auditor/: __init__.py  main.py
src/token_auditor/core/: __init__.py  claude.py  codex.py  constants.py  jsonl.py  opencode.py  pricing.py  render.py  session_resolution.py  utils.py
tests/: conftest.py  test_claude_core.py  test_cli_integration.py  test_codex_core.py  test_jsonl.py  test_logging.py  test_opencode_core.py  test_pricing.py  test_render.py  test_utils.py
