[project]
name = "token-auditor"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
token-auditor = "token_auditor.main:main"
codax = "token_auditor.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6",
    "ruff>=0.9",
    "ty>=0.0.1a1",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
addopts = "--cov=token_auditor --cov-report=term-missing --cov-fail-under=100"

[tool.ruff]
target-version = "py314"
line-length = 180

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.hatch.build.targets.wheel]
packages = ["src/token_auditor"]

[tool.hatch.build.targets.sdist]
include = [
    "src/token_auditor/**/*.py",
    "tests/**/*.py",
    "README.md",
    "pyproject.toml",
    "uv.lock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
